🔧 Setup operation ids for swagger docs
